<resources>
    <string name="app_name">uSnap</string>
    <string name="loading">Loading...</string>

    <!--Login-->
    <string name="action_login">LogIn</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="authentication">Authentication</string>
    <string name="login_success">Login Success!</string>
    <string name="fail_to_retrieve_user_info">Fail to retrieve user info!</string>

    <!--Registration-->
    <string name="registration_success">Registration Success!</string>

    <!--Social Networks-->
    <string name="facebook_app_id" translatable="false">465899996898725</string>
    <string name="facebook_app_namespace" translatable="false">usnap-poster</string>
    <string name="twitter_api_key" translatable="false">xWN8D23Qr6E0gJJFpthMXjbKX</string>
    <string name="twitter_api_secret" translatable="false">CJy9NakTiTNlfFkKByYg2YJe1UzmWw43PN7qrKEixJOWFV2MYM</string>

    <!--Select Media-->
    <string name="action_select_media">Select Media</string>
    <string name="action_select_media_type_title">Select Media Type</string>
    <string name="action_select_media_type_text">Please select a type of media to pick from gallery:</string>
    <string name="action_select_media_type_pick_image">Pick image</string>
    <string name="action_select_media_type_pick_video">Pick video</string>
    <string name="action_processing_image_title">Processing Image</string>
    <string name="action_processing_image_text">Processing image...</string>

    <!--Share-->
    <string name="action_share">Share</string>
    <string name="sharing">Sharing</string>
    <string name="share_add_comment_hint">Add comment</string>
    <string name="action_prompting_login_text">Please login or register to be able to share</string>
    <plurals name="character_plural">
        <item quantity="one">%d character</item>
        <item quantity="other">%d characters</item>
    </plurals>

    <!--Preferences-->
    <string name="preferences">Preferences</string>

    <!--Photo edit-->
    <string name="tool_filters_name">adjust</string>
    <string name="tool_draw_name">draw</string>
    <string name="tool_text_name">type</string>
    <string name="tool_crop_name">crop</string>
    <string name="tool_option_brightness_name">brightness</string>
    <string name="tool_option_contrast_name">contrast</string>
    <string name="tool_option_color_name">color</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="action_clear">Clear</string>
    <string name="action_undo">Undo</string>

    <!--Campaigns-->
    <string name="top_10">Top 10</string>
    <string name="latest_uploads">Latest uploads</string>
    <string name="see_all">See all</string>
    <plurals name="likes_plural">
        <item quantity="zero">No pts</item>
        <item quantity="one">%d pt</item>
        <item quantity="other">%d pts</item>
    </plurals>
    <string name="enter_contest">Enter contest</string>

    <!--Contest Page-->
    <string name="fragment_contest_page_prize">Prize</string>
    <string name="activity_contest_page_contest_rules">Contest Rules</string>

    <!--See All-->
    <string name="error_fetching_top_10_snaps">Error fetching top 10 snaps</string>
    <string name="see_all_photos">PHOTO</string>
    <string name="see_all_videos">VIDEOS</string>
    <string name="see_all_all">ALL</string>

    <!--Top 10 Snaps-->
    <plurals name="top10_snaps_plural">
        <item quantity="zero">pt</item>
        <item quantity="one">pt</item>
        <item quantity="other">pts</item>
    </plurals>
    <string name="top10_snaps_plural">{0,choice,0#pt|1#pt|1&lt;pts}</string>

    <!--Profile-->
    <string name="profile">Profile</string>
    <plurals name="profile_share_plural">
        <item quantity="zero">Share</item>
        <item quantity="one">Share</item>
        <item quantity="other">Shares</item>
    </plurals>
    <string name="profile_share_plural">{0,choice,0#Share|1#Share|1&lt;Shares}</string>
    <string name="profile_score">Score</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_campaigns">Campaigns</string>
    <string name="profile_my_feed">My feed</string>
    <string name="settings">Settings</string>
    <string name="fragment_settings_personal">Personal</string>
    <string name="fragment_settings_social">Social</string>
    <string name="fragment_settings_support">Support</string>
    <string name="fragment_settings_name_hint">Name</string>
    <string name="fragment_settings_birthday_hint">Birthday</string>
    <string name="fragment_settings_save_settings">Save Settings</string>
    <string name="fragment_settings_help_center">Help Center</string>
    <string name="fragment_settings_report_a_problem">Report a problem</string>
    <string name="fragment_settings_log_out">Logout</string>
    <string name="fragment_settings_email_intent_chooser">Contact uSnap...</string>

    <!--Photo details-->
    <string name="report_image">Report image</string>
    <string name="report_video">Report video</string>
    <string name="confirm_report_image">Report this image?</string>
    <string name="confirm_report_video">Report this video?</string>
    <string name="success_report_image">Thanks for reporting this image</string>
    <string name="success_report_video">Thanks for reporting this video</string>
    <string name="error_loading_image">Image could not be loaded</string>
    <string name="error_playing_video">Video could not be played</string>

    <!--Errors-->
    <string name="error_empty_username">username is required</string>
    <string name="error_empty_email">email is required</string>
    <string name="error_invalid_email">email is not valid</string>
    <string name="error_empty_password">password is required</string>
    <string name="error_empty_first_name">first name is required</string>
    <string name="error_empty_last_name">first name is required</string>
    <string name="error_empty_birthday">birthday is required</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_unable_to_take_picture">Unable to take picture</string>
    <string name="error_unable_to_open_image">Unable to open image</string>
    <string name="error_unable_to_open_video">Unable to open video</string>
    <string name="error_please_select_a_local_video">Please select a local video</string>
    <string name="error_unsupported_format">Unsupported format</string>
    <string name="error_unable_to_launch_camera">Unable to launch camera</string>
    <string name="error_unable_to_start_video_recording">Unable to start video recording</string>
    <string name="error_video_capture_failed">Video capture didn\'t work, please try again</string>
    <string name="error_not_enough_available_space">Memory full, please free up some disk space and try again.</string>
    <string name="error_no_email_client">There is no email client installed.</string>

</resources>
