<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_select_media_type_text" />

    <Button
        android:id="@+id/dialog_select_media_type_pick_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_select_media_type_pick_image" />

    <Button
        android:id="@+id/dialog_select_media_type_pick_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_select_media_type_pick_video" />

</LinearLayout>