<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/elements_horizontal_margin"
        android:paddingRight="@dimen/elements_horizontal_margin"
        android:paddingTop="@dimen/elements_double_vertical_margin"
        android:paddingBottom="@dimen/elements_double_vertical_margin"
        android:background="@color/primary_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/view_login_content_signup_firstName_editText"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:met_floatingLabelText="@string/first_name"
                android:layout_marginRight="@dimen/elements_half_horizontal_margin"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/view_login_content_signup_lastName_editText"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:met_floatingLabelText="@string/last_name"
                android:layout_marginLeft="@dimen/elements_half_horizontal_margin"/>

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/view_login_content_signup_email_editText"
            style="@style/LoginEditText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_floatingLabelText="@string/email"
            android:layout_marginTop="@dimen/elements_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/elements_vertical_margin">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/view_login_content_signup_username_editText"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/username"
                android:inputType="textNoSuggestions"
                app:met_floatingLabelText="@string/username"
                android:layout_marginRight="@dimen/elements_half_horizontal_margin"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/view_login_content_signup_password_editText"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                app:met_floatingLabelText="@string/password"
                android:layout_marginLeft="@dimen/elements_half_horizontal_margin"/>

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/view_login_content_signup_birthday_editText"
            style="@style/LoginEditText"
            android:hint="@string/birthday"
            android:inputType="text"
            app:met_floatingLabelText="@string/birthday"
            android:layout_marginTop="@dimen/elements_vertical_margin"/>

    </LinearLayout>

    <Button
        android:id="@+id/view_login_content_signup_btn"
        style="@style/LoginButton"
        android:text="@string/action_signup"/>

</merge>