<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/elements_horizontal_margin"
        android:paddingRight="@dimen/elements_horizontal_margin"
        android:paddingTop="@dimen/elements_double_vertical_margin"
        android:paddingBottom="@dimen/elements_double_vertical_margin"
        android:background="@color/light_gray">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/view_login_content_login_username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/pink"
            app:met_primaryColor="@color/pink"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/username"
            app:met_floatingLabelAnimating="true"
            app:met_textColor="@color/dark_gray"
            app:met_textColorHint="@color/text_hint" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/view_login_content_login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            app:met_baseColor="@color/pink"
            app:met_primaryColor="@color/pink"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/password"
            app:met_floatingLabelAnimating="true"
            app:met_textColor="@color/dark_gray"
            app:met_textColorHint="@color/text_hint"
            android:layout_marginTop="@dimen/elements_vertical_margin"/>

        <Button
            android:id="@+id/view_login_content_login_resetPassword_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/pink"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/elements_vertical_margin" />

    </LinearLayout>

    <Button
        android:id="@+id/view_login_content_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:text="@string/action_login"
        android:background="@drawable/sel_login_btn"/>

</merge>